<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/profilePushButton"
        android:layout_width="92dp"
        android:layout_height="58dp"
        android:text="@string/profile_push"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.109"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.495" />

    <Button
        android:id="@+id/getAppInboxMessage"
        android:layout_width="160dp"
        android:layout_height="53dp"
        android:text="@string/get_message_inbox"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.184"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.218" />

    <Button
        android:id="@+id/pushTemplates"
        android:layout_width="338dp"
        android:layout_height="44dp"
        android:text="@string/push_templates"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.561"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.394" />

    <Button
        android:id="@+id/eventButton"
        android:layout_width="342dp"
        android:layout_height="47dp"
        android:text="@string/on_user_login"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.592" />

    <Button
        android:id="@+id/appInboxButton"
        android:layout_width="154dp"
        android:layout_height="51dp"
        android:text="@string/app_inbox"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.863"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.305" />

    <Button
        android:id="@+id/nativeDisplayButton"
        android:layout_width="105dp"
        android:layout_height="54dp"
        android:text="@string/native_display_button"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.885"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.494" />

    <Button
        android:id="@+id/inAppButton"
        android:layout_width="145dp"
        android:layout_height="53dp"
        android:padding="10sp"
        android:text="@string/in_app_message"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.831"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.216" />

    <Button
        android:id="@+id/pushButton"
        android:layout_width="168dp"
        android:layout_height="54dp"
        android:text="@string/push_message"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.304" />

    <Button
        android:id="@+id/addToCartButton"
        android:layout_width="115dp"
        android:layout_height="49dp"
        android:text="@string/addedtocart"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.479"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.49" />

    <Button
        android:id="@+id/chargedButton"
        android:layout_width="110dp"
        android:layout_height="47dp"
        android:text="@string/charged"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.471"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.941" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_basic"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/nativeDisplayButton">


    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/addCart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addcartMultivalue"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.844" />

    <Button
        android:id="@+id/clearCart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Next Screen"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.943"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.844" />

    <Button
        android:id="@+id/sendBounded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Bounded"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.844" />

    <RelativeLayout
        android:id="@+id/innerimage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="5dp"
        app:layout_constraintTop_toBottomOf="@+id/eventButton"
        tools:layout_editor_absoluteX="0dp">


        <LinearLayout
            android:id="@+id/imagecontainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:orientation="horizontal"
            android:padding="5dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iconimage"
                android:layout_width="100dp"
                android:layout_height="90dp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/mainimage"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginLeft="20dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/titlem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/imagecontainer"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/titlem"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/imagecontainer"
            android:textColor="#ffffff" />
    </RelativeLayout>

    <EditText
        android:id="@+id/editTextTextEmailAddress2"
        android:layout_width="279dp"
        android:layout_height="45dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.772"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone2" />

    <EditText
        android:id="@+id/editTextPhone2"
        android:layout_width="277dp"
        android:layout_height="44dp"
        android:ems="10"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.761"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.778"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress2" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/setOptout"
        android:layout_width="103dp"
        android:layout_height="38dp"
        android:layout_marginTop="24dp"
        android:text="Opt-out"
        app:layout_constraintEnd_toStartOf="@+id/chargedButton"
        app:layout_constraintHorizontal_bias="0.307"
        app:layout_constraintStart_toStartOf="@+id/sendBounded"
        app:layout_constraintTop_toBottomOf="@+id/sendBounded"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/offline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Offline"
        app:layout_constraintBottom_toBottomOf="@+id/chargedButton"
        app:layout_constraintEnd_toEndOf="@+id/clearCart"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toEndOf="@+id/chargedButton"
        app:layout_constraintTop_toBottomOf="@+id/clearCart"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Phone"
        app:layout_constraintEnd_toStartOf="@+id/editTextPhone2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextPhone2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Email"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toStartOf="@+id/editTextTextEmailAddress2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Identity"
        app:layout_constraintEnd_toStartOf="@+id/editTextTextPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress2" />


</androidx.constraintlayout.widget.ConstraintLayout>